# curso-django

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  Dockerfile  Pipfile  Procfile  README.md  build.sh  codecov.yml  docker-compose.yml  fly.toml  manage.py  newrelic.ini  pyproject.toml  render.yaml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml  deploy.yml  test.yml
contrib/: env-sample
pypro/: asgi.py  conftest.py  extra_imports.py  settings.py  urls.py  wsgi.py
pypro/aperitivos/: admin.py  models.py  tests.py  urls.py  views.py
pypro/aperitivos/migrations/: 0001_initial.py  0002_auto_20210301_1253.py  0002_rename_vimeo_id_video_youtube_id.py
pypro/aperitivos/tests/: test.py  test_indice.py  test_video.py  tests_indice.py  tests_video.py
pypro/base/: admin.py  apps.py  models.py  urls.py  views.py
pypro/base/migrations/: 0001_initial.py
pypro/base/static/: index.html
pypro/base/tests/: test_home.py  test_login.py
pypro/modulos/: admin.py  apps.py  context_processors.py  facade.py  models.py  urls.py  views.py
pypro/modulos/migrations/: 0001_initial.py  0002_modulo_slug.py  0003_populando_slug.py  0004_slug_unico_e_nao_nulo.py  0005_aula.py  0006_aula_vimeo_id.py  0007_auto_vimeo_obrigatorio.py  0007_vimeo_obrigatorio.py  0008_rename_vimeo_id_aula_youtube_id.py
pypro/modulos/tests/: test_aba_de_modulos.py  test_aula_detalhe.py  test_facade.py  test_modulo_detalhe.py  test_modulos_indice.py
pypro/turmas/: admin.py  apps.py  models.py  urls.py  views.py
(+49 files in other folders)
