[tool.poetry]
name = "curso-django"
version = "0.1.0"
description = ""
authors = ["Victor Augusto <victor.oliveira@onidata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
gunicorn = "^21.2.0"
python-decouple = "^3.8"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
django-s3-folder-storage = "^0.5"
collectfast = "^2.2.0"
django-debug-toolbar = "^4.2.0"
sentry-sdk = "^1.36.0"
django-ordered-model = "^3.7.4"
ipython = "^8.17.2"
django-extensions = "^3.2.3"
social-auth-app-django = "^5.4.0"
scout-apm = "^3.0.2"
newrelic = "^9.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest-django = "^4.7.0"
pytest-cov = "^4.1.0"
codecov = "^2.1.13"
model-mommy = "^2.0.0"
pip-audit = "^2.6.1"
pre-commit = "^3.5.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pypro.settings"

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]
